# vcdvalidator

./: Cargo.toml  LICENSE  README.md  example_accelerometer_tb.vcd
src/: main.rs
