[package]
name = "vcdvalidator"
version = "1.0.1"
edition = "2024"
authors = ["Ozgur Karatas <ozgur@linux.com>"]
description = "A package VCD validator"
license = "MIT"
homepage = "https://goosey.org"
repository = "https://github.com/gooseyinc/vcdvalidator"
documentation = "https://docs.rs/vcdvalidatgor"
readme = "README.md"

[dependencies]
clap = { version = "3", features = ["derive"] }
regex = "1.0"  # Regex
serde = { version = "1.0", features = ["derive"] }  # Serde JSON
serde_json = "1.0"  # JSON input

[dev-dependencies]